styles/main: fixup infobar_rt on mobile

--- a/webroot/styles/main.css
+++ b/webroot/styles/main.css
@@ -245,6 +245,7 @@ code {
 
 	#navbar,
 	#app,
+	#infobar_rt,
 	.center_page {
 		width: 100%;
 		max-width: 100%;
